删除空文件

--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
     <!-- 物理引擎 -->
     <script src="./physicsEngine.js"></script>
     <!-- 程序入口 -->
-    <script src="./billiard.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
